--- a/README
+++ b/README
@@ -50,10 +50,10 @@ Now, there are still around 4 or 5 USRP, 20+DBSRX, 10+RFX remains,
 we'd like to sell for some fund for a new project. If someone need them, please email us.
 
 
-Nick Chan (Guangxi Normal University)  nick(dot)chitchan(AT)gmail.com
-Wirelessddcat (Guangxi Normal University)  wirelessddcat(AT)gmail.com
+Nick Chan nick(dot)chitchan(AT)gmail.com
+Wirelessddcat wirelessddcat(AT)gmail.com
 Project Leader: Howard Wong ffp(dot)howard(AT)gmail.com
 
-Special Thanks to Prof. Qin Shao Hua (Guangxi Normal University)
+Special Thanks to Prof. Qin Shao Hua 
 
         
